# car

./: .gitignore  README.md
docs/superpowers/plans/: 2026-07-16-mecanum-wheel-urdf.md
docs/superpowers/specs/: 2026-07-16-mecanum-wheel-urdf-design.md
src/car/: CMakeLists.txt  package.xml
src/car/config/: ekf.yaml  filter_example.yaml  params.yaml
src/car/include/car/: SharedTopic.hpp  SharedTopicClient.hpp  pub_node.hpp  sub_node.hpp
src/car/launch/: car_ekf_launch.py  car_launch.py
src/car/src/: main.cpp  pub_node.cpp  sub_node.cpp
src/car/tools/: pub_node.cpp
src/fang/: CMakeLists.txt  package.xml
src/fang/config/: fang.rviz
src/fang/launch/: display.launch.py
src/fang/urdf/: base.urdf.xacro  car.urdf.xacro  yuan.urdf.xacro
src/fang/urdf/wheel/: wheel.urdf.xacro
src/heart/: CMakeLists.txt  package.xml
src/heart/config/: rviz.rviz  rviz2.rviz
src/heart/launch/: launch.py
src/heart/urdf/: base.urdf.xacro  car.urdf.xacro
src/heart/urdf/sensor/: imu.urdf.xacro  scan.urdf.xacro
src/heart/urdf/wheel/: wheel.urdf.xacro
src/libxr/: CMakeLists.txt  package.xml
src/livox_ros_driver2/: build.sh
src/livox_ros_driver2/config/: MID360_config.json
src/yesense_ros2/yesense_std_ros2/: CMakeLists.txt
src/yesense_ros2/yesense_std_ros2/config/: yesense_config.yaml
src/yesense_ros2/yesense_std_ros2/src/: yesense_decoder.cpp  yesense_node.cpp
